feat: add get social media endpoint
